metadata/force-app/main/default/objects/CustomName_Clqjz__c/CustomName_Clqjz__c.object-meta.xml
<CustomObject>
    <description>Description_EYGow</description>
    <label>CustomLabel_PsYGq</label>
    <nameField>
        <label>CustomLabel_PsYGq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_PsYGqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>