metadata/force-app/main/default/objects/CustomName_Clqjz__c/fields/CustomField_gpWjy__c.field-meta.xml
<CustomField>
    <fullName>CustomField_gpWjy__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldfzUkd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>