metadata/force-app/main/default/objects/CustomName_Clqjz__c/fields/CustomField_rbevR__c.field-meta.xml
<CustomField>
    <fullName>CustomField_rbevR__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAAiKn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>